テストコード修正